# Mesh-arch

./: .gitignore  .meshignore  .meshignore.example  AGENTS.md  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
docs/: ARCHITECTURE.md  GETTING_STARTED.md
files/: MCP_INTEGRATION.md  MESH_TECHNICAL_OVERVIEW.md  RUN_GUIDE.md
handoffs/: demo_ready.md  user_flow_simulation.md
mesh/: cli.py
mesh/analysis/: builder.py  taint.py  workspace.py
mesh/auth/: __init__.py  client.py  storage.py  tier.py
mesh/core/: graph.py  parser.py  storage.py  workspace.py
mesh/enforcement/: checker.py  history.py  hook.py  ignorer.py  reporter.py
mesh/llm/: __init__.py  downloader.py  explainer.py  local.py
mesh/mcp/: server.py  summary.py  tools.py
mesh/ollama/: compatibility.py  detector.py  explainer.py  server.py  wizard.py
mesh/payment/: __init__.py  stripe.py  webhook.py
tests/: test_auth.py  test_mesh_v2.py
tests/fixtures/fastapi_project/: main.py
tests/fixtures/fastapi_project/api/: users.py
tests/fixtures/fastapi_project/auth/: utils.py
tests/fixtures/fastapi_project/repositories/: user_repository.py
tests/fixtures/fastapi_project/services/: user_service.py
tests/fixtures/python_project/api/: routes.py
tests/fixtures/python_project/auth/: middleware.py  utils.py
tests/fixtures/python_project/payments/: processor.py
tests/fixtures/ts_project/src/: api.ts  auth.ts
