[project]
name = "mesh-arch"
version = "1.0.9"
requires-python = ">=3.10"
description = "Architectural coherence layer for AI-generated codebases"
dependencies = [
    # Phase 1 — program analysis
    "ast-grep-py>=0.1.0",
    "rustworkx>=0.15.0",
    "click>=8.1.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "psutil>=5.9.0",
    "ollama>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["mesh*"]

[project.scripts]
mesh = "mesh.cli:main"

[project.optional-dependencies]
train = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.20.0",
    "torch-geometric>=2.5.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
